--- a/TAS-Drug.ipynb
+++ b/TAS-Drug.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Distributed under GPL-3.0 license\n",
     "\n",
-    "This is a Jupyter Python notebook for the [tblast-genomes](https://github.com/michalbukowski/tblastn-genomes) pipeline output analysis and visualisation. It is a part of the [TAS-Drug repository](https://github.com/michalbukowski/tas-drug) and is associated with the following study:\n",
+    "This is a Jupyter Python notebook for the [tblastn-genomes](https://github.com/michalbukowski/tblastn-genomes) pipeline output analysis and visualisation. It is a part of the [TAS-Drug repository](https://github.com/michalbukowski/tas-drug) and is associated with the following study:\n",
     "\n",
     "Bukowski M, Banasik M, Chlebicka K, Bednarczyk K, Bonar E, Sokołowska D, Żądło T, Dubin G, Władyka B. _Analysis of co-occurrence of type II toxin–antitoxin systems and antibiotic resistance determinants in Staphylococcus aureus_. mSystems 0:e00957-24.\n",
     "https://doi.org/10.1128/msystems.00957-24\n",
