--- a/TAS-Drug.ipynb
+++ b/TAS-Drug.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "This is a Jupyter Python notebook for the [tblastn-genomes](https://github.com/michalbukowski/tblastn-genomes) pipeline output analysis and visualisation. It is a part of the [TAS-Drug repository](https://github.com/michalbukowski/tas-drug) and is associated with the following study:\n",
     "\n",
-    "Bukowski M, Banasik M, Chlebicka K, Bednarczyk K, Bonar E, Sokołowska D, Żądło T, Dubin G, Władyka B. _Analysis of co-occurrence of type II toxin–antitoxin systems and antibiotic resistance determinants in Staphylococcus aureus_. mSystems 0:e00957-24.\n",
+    "Bukowski M, Banasik M, Chlebicka K, Bednarczyk K, Bonar E, Sokołowska D, Żądło T, Dubin G, Władyka B. _Analysis of co-occurrence of type II toxin–antitoxin systems and antibiotic resistance determinants in Staphylococcus aureus_. (2025) mSystems 0:e00957-24.\n",
     "https://doi.org/10.1128/msystems.00957-24\n",
     "\n",
     "---"
@@ -1133,16 +1133,16 @@
        "      <th>PezTAnti/PezTTox</th>\n",
        "      <th>PemI-Swar/PemK-Swar</th>\n",
        "      <th>...</th>\n",
-       "      <th>vanR_in_vanM_cl</th>\n",
-       "      <th>qacE</th>\n",
        "      <th>abeS</th>\n",
-       "      <th>aadA27</th>\n",
-       "      <th>OXA-36</th>\n",
-       "      <th>clbC</th>\n",
-       "      <th>Ecol_catII</th>\n",
-       "      <th>cmlA6</th>\n",
+       "      <th>OKP-B-12</th>\n",
+       "      <th>FosBx1</th>\n",
        "      <th>salA</th>\n",
-       "      <th>LEN-6</th>\n",
+       "      <th>OXA-36</th>\n",
+       "      <th>dfrA8</th>\n",
+       "      <th>rsmA</th>\n",
+       "      <th>CRP</th>\n",
+       "      <th>lsaC</th>\n",
+       "      <th>TEM-243</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>assembly</th>\n",
@@ -1239,15 +1239,15 @@
        "GCA_000009005.1                   0                    0                 0   \n",
        "GCA_000009585.1                   0                    0                 0   \n",
        "\n",
-       "                 PemI-Swar/PemK-Swar  ...  vanR_in_vanM_cl  qacE  abeS  \\\n",
-       "assembly                              ...                                \n",
-       "GCA_000009005.1                    0  ...                0     0     0   \n",
-       "GCA_000009585.1                    0  ...                0     0     0   \n",
+       "                 PemI-Swar/PemK-Swar  ...  abeS  OKP-B-12  FosBx1  salA  \\\n",
+       "assembly                              ...                                 \n",
+       "GCA_000009005.1                    0  ...     0         0       0     0   \n",
+       "GCA_000009585.1                    0  ...     0         0       0     0   \n",
        "\n",
-       "                 aadA27  OXA-36  clbC  Ecol_catII  cmlA6  salA  LEN-6  \n",
-       "assembly                                                               \n",
-       "GCA_000009005.1       0       0     0           0      0     0      0  \n",
-       "GCA_000009585.1       0       0     0           0      0     0      0  \n",
+       "                 OXA-36  dfrA8  rsmA  CRP  lsaC  TEM-243  \n",
+       "assembly                                                  \n",
+       "GCA_000009005.1       0      0     0    0     0        0  \n",
+       "GCA_000009585.1       0      0     0    0     0        0  \n",
        "\n",
        "[2 rows x 177 columns]"
       ]
