--- a/TAS-Drug.ipynb
+++ b/TAS-Drug.ipynb
@@ -1133,16 +1133,16 @@
        "      <th>PezTAnti/PezTTox</th>\n",
        "      <th>PemI-Swar/PemK-Swar</th>\n",
        "      <th>...</th>\n",
-       "      <th>abeS</th>\n",
+       "      <th>ceoB</th>\n",
        "      <th>OKP-B-12</th>\n",
-       "      <th>FosBx1</th>\n",
-       "      <th>salA</th>\n",
-       "      <th>OXA-36</th>\n",
-       "      <th>dfrA8</th>\n",
-       "      <th>rsmA</th>\n",
-       "      <th>CRP</th>\n",
-       "      <th>lsaC</th>\n",
+       "      <th>vanR_in_vanM_cl</th>\n",
+       "      <th>OXA-653</th>\n",
        "      <th>TEM-243</th>\n",
+       "      <th>qacE</th>\n",
+       "      <th>abeS</th>\n",
+       "      <th>cmlA5</th>\n",
+       "      <th>LEN-6</th>\n",
+       "      <th>QnrD1</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>assembly</th>\n",
@@ -1239,15 +1239,15 @@
        "GCA_000009005.1                   0                    0                 0   \n",
        "GCA_000009585.1                   0                    0                 0   \n",
        "\n",
-       "                 PemI-Swar/PemK-Swar  ...  abeS  OKP-B-12  FosBx1  salA  \\\n",
-       "assembly                              ...                                 \n",
-       "GCA_000009005.1                    0  ...     0         0       0     0   \n",
-       "GCA_000009585.1                    0  ...     0         0       0     0   \n",
+       "                 PemI-Swar/PemK-Swar  ...  ceoB  OKP-B-12  vanR_in_vanM_cl  \\\n",
+       "assembly                              ...                                    \n",
+       "GCA_000009005.1                    0  ...     0         0                0   \n",
+       "GCA_000009585.1                    0  ...     0         0                0   \n",
        "\n",
-       "                 OXA-36  dfrA8  rsmA  CRP  lsaC  TEM-243  \n",
-       "assembly                                                  \n",
-       "GCA_000009005.1       0      0     0    0     0        0  \n",
-       "GCA_000009585.1       0      0     0    0     0        0  \n",
+       "                 OXA-653  TEM-243  qacE  abeS  cmlA5  LEN-6  QnrD1  \n",
+       "assembly                                                            \n",
+       "GCA_000009005.1        0        0     0     0      0      0      0  \n",
+       "GCA_000009585.1        0        0     0     0      0      0      0  \n",
        "\n",
        "[2 rows x 177 columns]"
       ]
@@ -1263,6 +1263,7 @@
     "        print(f'\\rGenerating the summary... {i/asm_len*100:3.0f}%', end='')\n",
     "    for locus in asm.tas + asm.drugs:\n",
     "        dist_df.loc[asm_acc, locus.name] = 1\n",
+    "print(f'\\rGenerating the summary... 100%', end='')\n",
     "print(f'\\nTotal number of genomes: {dist_df.shape[0]}')\n",
     "dist_df.head(2)"
    ]
